test/apps/online-boutique-extras/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: shop.day.technat.dev
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - shop.day.technat.dev
      secretName: frontend-tls
